# image

./: CMakeLists.txt
cmake_modules/: FindGraphviz.cmake
cmake_modules/Windows/: FindGraphviz.cmake  FindImageMagick.cmake
src/: CMakeLists.txt  animation.xq  basic.xq  image.jsd  image.xsd  manipulation.xq  paint.xq
src/animation.xq.src/: animation.cpp  animation_module.h
src/basic.xq.src/: basic_module.cpp  basic_module.h
src/com/zorba-xquery/www/modules/: CMakeLists.txt
src/com/zorba-xquery/www/modules/image/: CMakeLists.txt  animation.xq  basic.xq  error.xq  graphviz.xq  image.xsd  manipulation.xq  paint.xq
src/com/zorba-xquery/www/modules/image/animation.xq.src/: animation.cpp  animation.h  animation_module.cpp  animation_module.h
src/com/zorba-xquery/www/modules/image/basic.xq.src/: basic.cpp  basic.h  basic_module.cpp  basic_module.h
src/com/zorba-xquery/www/modules/image/graphviz.xq.src/: graphviz.cpp  graphviz.h
src/com/zorba-xquery/www/modules/image/image.xq.src/: image_function.cpp  image_function.h  image_module.cpp  image_module.h
src/com/zorba-xquery/www/modules/image/image_c.src/: draw_in_c.cpp  draw_in_c.h
src/com/zorba-xquery/www/modules/image/image_commons/: image_function.cpp  image_function.h  image_module.cpp  image_module.h
src/com/zorba-xquery/www/modules/image/image_draw/: draw_in_c.cpp  draw_in_c.h
src/com/zorba-xquery/www/modules/image/manipulation.xq.src/: manipulation.cpp  manipulation.h  manipulation_module.cpp  manipulation_module.h
src/com/zorba-xquery/www/modules/image/paint.xq.src/: paint.cpp  paint.h  paint_module.cpp  paint_module.h
src/image_commons/: image_function.cpp  image_function.h  image_module.h
src/manipulation.xq.src/: manipulation.cpp  manipulation.h  manipulation_module.cpp  manipulation_module.h
src/paint.xq.src/: paint.cpp  paint.h  paint_module.cpp  paint_module.h
test/ExpQueryResults/image/: basic_type.xml.res
test/Queries/image/: animation.xq  animation_create.xq  animation_create_morphed.xq  basic.xq  basic_compress.xq  basic_convert.xq  basic_create.xq  basic_equals.xq  basic_exif.xq  basic_height.xq  basic_svg.xq  basic_type.xq  basic_width.xq  manipulation_1.xq  manipulation_2.xq  manipulation_3.xq  manipulation_4.xq  manipulation_5.xq  manipulation_add_noise.xq  manipulation_blur.xq  manipulation_charcoal.xq  manipulation_chop.xq  manipulation_contrast.xq  manipulation_crop.xq  manipulation_despeckle.xq  manipulation_edge.xq  manipulation_emboss.xq  manipulation_enhance.xq  manipulation_equalize.xq  manipulation_erase.xq  manipulation_flip.xq  manipulation_flop.xq  manipulation_gamma.xq  manipulation_gamma2.xq  manipulation_implode.xq  manipulation_oil_paint.xq  manipulation_overlay.xq  manipulation_reduce_noise.xq  manipulation_resize.xq  manipulation_rotate.xq  (+23 more)
test_graphviz/ExpQueryResults/: dot.xml.res
test_graphviz/Queries/: dot.xq
